<resources>
    <string name="app_name">PuffinPodcaster</string>
    <string name="app_label">Search Feature</string>
    <string name="title_my_podcast">Podcasts</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="title_preference">Preference</string>
    <string name="onetimerequest">OneTimeRequest</string>
    <string name="widget_empty_content_description">Widget Image</string>
    <string name="default_widget_title">Podcast Title</string>
    <string name="action_search">Search Podcast</string>
    <string name="podcast_title_label">Puffin Podcaster</string>
    <string name="audio_books_link">Audi Books Link</string>
    <string name="uninitialized_Title">Default Text</string>
    <string name="share_this_app">Share This app</string>
    <string name="feedback_form_title">Feedback Form</string>
    <string name="feedback_label">Send Feedback</string>
    <string name="download_label">Downloads</string>
    <string name="listening_history_label">Listening History</string>
    <string name="searchAndDiscoverRegion">Search &amp; Discover Region ( For Popular Podcasts)</string>
    <string name="notificationLabelText">Enable Notifications</string>
    <string name="updateFrequencyLabaelMainText">Update Frequency</string>
    <string name="updateFrequencyLabaelSubText">Pull latest Podcasts </string>
    <string name="eight_hours_text">Eight Hours</string>
    <string name="one_day_text">One day</string>
    <string name="weekly_text">Weekly</string>
    <string name="search_hint">Search Podcast of Your Interest</string>
    <string name="search_view">Enter search</string>
    <string name="search_mock">Search Mock........</string>
    <string name="latest_label">Latest</string>
    <string name="play_later">Play later</string>
    <string name="play_list">Play List</string>
    <string name="popular_label">Popular</string>
    <string name="recommended_label">Recom\'d</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="todo">TODO</string>
    <string name="categoryImageDescription">Category Image Description</string>
    <string name="searchView">Search By Keyword</string>
    <string name="episodes">Episodes</string>
    <string name="playEpisode">Play Episode</string>
    <string name="addToFavorite">Add to Favorite</string>
    <string name="playLater">Play Later</string>
    <string name="detail_label">Details</string>
    <string name="episodeDetail">Episode Details</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="notification_text">Press play to hear the piece!</string>
    <string name="curatedList">Curated Podcasts</string>
    <string name="curatedEpisodes">Curated Episodes</string>
    <string name="popular_label_widget">Popular Podcast</string>
    <string name="audio_books">Audio Books</string>
    <string name="empty_favorite_text">Nothing To Show. Please select Episode/Audio details view and click on Add to favorite button.</string>
    <string name="empty_later_text">Nothing to show. Please select Episode/Audio details view and click on Play Later button.</string>
    <string name="downloaded_title">Downloaded Podcasts</string>
    <string name="listening_history_title">Listening History</string>
    <string name="published_date">Date Published</string>
    <string name="history_title">Title</string>
    <string name="audio_lengt_in_seconds">Audio Length (Secs)</string>
    <string name="notificationTitle">New Popular Podcast Notification</string>
    <string name="notificationChannelId">Puffin_Podcaster</string>
    <string name="keyedword">Keyed Word:</string>
</resources>
