<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_mypocasts"
        android:icon="@drawable/ic_dashboard_black_24dp"
     app:showAsAction="always"
        android:title="@string/title_my_podcast" />


    <item
        android:id="@+id/navigation_preferences"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        app:showAsAction="always"
        android:title="@string/title_preference" />
    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore_black_24dp"
        app:showAsAction="always"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_outline_black_24dp"
        app:showAsAction="always"
        android:title="@string/title_profile" />

</menu>
