<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@+id/mobile_navigation"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_mypocasts"
        android:name="com.mobile.anvce.puffinpodcaster.ui.mypodcasts.MyPodcastsFragment"
        android:label="@string/title_my_podcast"
        tools:layout="@layout/fragment_mypodcasts" >

    <action android:id="@+id/action_podcasts_to_searchable"
        app:destination="@id/navigation_searchable"
        app:popUpToInclusive="true"
        app:popUpTo="@id/navigation_mypocasts"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="com.mobile.anvce.puffinpodcaster.ui.preferences.PreferencesFragment"
        android:label="@string/title_preference"
        tools:layout="@layout/fragment_preferences">

        <action android:id="@+id/action_preference_to_searchable"
            app:destination="@id/navigation_searchable"
            app:popUpToInclusive="true"
            app:popUpTo="@id/navigation_preferences"/>


    </fragment>
    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.mobile.anvce.puffinpodcaster.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore">

        <action android:id="@+id/action_explore_to_searchable"
            app:destination="@id/navigation_searchable"
            app:popUpToInclusive="true"
            app:popUpTo="@id/navigation_explore"/>

    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mobile.anvce.puffinpodcaster.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >

        <action android:id="@+id/action_profile_to_searchable"
            app:destination="@id/navigation_searchable"
            app:popUpToInclusive="true"
            app:popUpTo="@id/navigation_profile"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_searchable"
        android:name="com.mobile.anvce.puffinpodcaster.ui.search.SearchableFragment"
        android:label="@string/search_view"
        tools:layout="@layout/fragment_searchable">


    </fragment>

</navigation>