<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@+id/mobile_navigation"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_episodes">

    <fragment
        android:id="@+id/navigation_mypocasts"
        android:name="com.mobile.anvce.puffinpodcaster.ui.mypodcasts.MyPodcastsFragment"
        android:label="@string/title_my_podcast"
        tools:layout="@layout/fragment_mypodcasts">

        <action
            android:id="@+id/action_myPodcasts_to_episodes"
            app:destination="@id/navigation_episodes"
            app:popUpTo="@id/navigation_mypocasts"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="com.mobile.anvce.puffinpodcaster.ui.preferences.PreferencesFragment"
        android:label="@string/title_preference"
        tools:layout="@layout/fragment_preferences">

        <action
            android:id="@+id/action_preferenc_to_episodes"
            app:destination="@id/navigation_episodes"
            app:popUpTo="@id/navigation_preferences"
            app:popUpToInclusive="true" />

    </fragment>
    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.mobile.anvce.puffinpodcaster.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore">
        <action
            android:id="@+id/action_explore_to_episodes"
            app:destination="@id/navigation_episodes"
            app:popUpTo="@id/navigation_explore"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mobile.anvce.puffinpodcaster.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profile_to_episodes"
            app:destination="@id/navigation_episodes"
            app:popUpTo="@id/navigation_profile"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_searchable"
        android:name="com.mobile.anvce.puffinpodcaster.ui.search.SearchableFragment"
        android:label="@string/search_view"
        tools:layout="@layout/fragment_searchable" />

    <fragment
        android:id="@+id/navigation_episodes"
        android:name="com.mobile.anvce.puffinpodcaster.ui.EpisodesListFragment"
        android:label="@string/episodes"
        tools:layout="@layout/fragment_episodes_list">

        <action
            android:id="@+id/action_episode_to_podcasts"
            app:destination="@id/navigation_mypocasts"
            app:popUpTo="@id/navigation_episodes"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_episode_to_explore"
            app:destination="@id/navigation_explore"
            app:popUpTo="@id/navigation_episodes"
            app:popUpToInclusive="true" />

    </fragment>

    </navigation>