<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/podcast_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/nunito_sans_extra_bold"
            android:lineSpacingMultiplier="0.9"
            android:paddingBottom="@dimen/text_bottom_padding"
            android:text="@string/podcast_title_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/podcast_title_text_size" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/audio_book_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/audio_book_right_margin"
                android:layout_marginRight="@dimen/audio_book_right_margin"
                android:background="@drawable/ic_book_audio"
                android:backgroundTint="@color/colorPrimaryDark"
                android:contentDescription="@string/audio_books_link"
                android:paddingEnd="@dimen/text_bottom_padding"
                android:paddingRight="@dimen/text_bottom_padding"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/audio_book_link"
                android:layout_alignRight="@+id/audio_book_link"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/audio_books"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryNight" />

        </RelativeLayout>


    </LinearLayout>


</layout>