<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="5"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="5"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="5"
                android:text="@string/message" />

            <EditText
                android:id="@+id/messageData"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/message_layout_height"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/message"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:maxLines="2" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/feedbackSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_bottom_navigation_margin"
            android:layout_marginLeft="@dimen/activity_bottom_navigation_margin"
            android:backgroundTint="@color/colorPrimaryDarkNight"
            android:text="@string/sendFeedback" />
    </LinearLayout>
</ScrollView>